--- a/anime-detail.html
+++ b/anime-detail.html
@@ -132,7 +132,8 @@
   <audio id="Clevatess-ost" loop><source src="https://www.dropbox.com/scl/fi/qzr41ai3hfsj02xr8sntz/ending-online-audio-converter.com.mp3?rlkey=5upvk1zx8vmzjmyq9vowb460y&st=nvfwm6yh&raw=1" type="audio/mpeg"></audio>
   <audio id="drstone-ost" loop><source src="https://www.dropbox.com/scl/fi/s1ptrhwxkpuexhnb30cf8/Dr.-Stone-Good-Morning-World-Burnout-Syndromes-AMV-sub-espa-ol.mp3?rlkey=rk75fn8wl2u5m6fa0r5616dih&st=ocriop50&&raw=1" type="audio/mpeg"></audio>
   <audio id="sr-ost" loop><source src="https://www.dropbox.com/scl/fi/1o7env4rkr3ol8gfdnumr/Shoujo-Ramune-Anime-Opening-OVA-OP.mp3?rlkey=xqiqtoj22rmc8znm9k8p5pfdw&st=wjprsjpj&raw=1" type="audio/mpeg"></audio>
-  <audio id="onepieceliveaction-ost" loop><source src="https://www.dropbox.com/scl/fi/o1360gju7gld8ay7uxa05/We-Are.-OP.-1-One-Piece.-Traduccion-Al-Espa-ol.mp3?rlkey=0evbf7rq48un13wfa381wh475&st=fxe5vp0h&raw=1" type="audio/mpeg"></audio> 
+  <audio id="onepieceliveaction-ost" loop><source src="https://www.dropbox.com/scl/fi/o1360gju7gld8ay7uxa05/We-Are.-OP.-1-One-Piece.-Traduccion-Al-Espa-ol.mp3?rlkey=0evbf7rq48un13wfa381wh475&st=fxe5vp0h&raw=1" type="audio/mpeg"></audio>
+  <audio id="Toyoureternity-ost" loop><source src="https://www.dropbox.com/scl/fi/pb85oa1z2xbqg102rrgkt/To-Your-Eternity-Opening-Hikaru-Utada-Pink-Blood-Sub-Espa-ol-Lyrics-Romaji.mp3?rlkey=k38if490kn1hroj8f1xiw3d31&st=0bp9ge5z&raw=1" type="audio/mpeg"></audio>
   <audio id="Shinsei Kourin-ost" loop><source src="https://www.dropbox.com/scl/fi/x8m4ib42z3wkzav2iljem/Ending-Shinsei-Kourin-Dacryon.mp3?rlkey=xdatk5v3lsmpf82ydscl0i9lc&st=1h30p4qk&raw=1" type="audio/mpeg"></audio>
 
   <!-- CONTENEDOR PRINCIPAL -->
@@ -1310,7 +1311,7 @@
       24: {
         title: "Definitivamente. ¡No me gusta mi hermano para nada!",
         desc: "Shuusuke Takanashi es un joven apasionado por coleccionar todo tipo de contenido lascivo, pero se enfrenta a un dilema cuando su encantadora hermana menor, Nao, busca atraer su atención como mujer. Para su fortuna, o quizás su infortunio, reaparece Iroha Tsuchiura, una amiga de la infancia de Shuusuke a quien no había visto en más de 10 años. Sin embargo, Iroha comienza a seducirlo y a mostrar un lado inusual. Así da comienzo a un triángulo amoroso entre Nao, Iroha y Shuusuke, al que se une Mayuka Kondou, compañera de clase y amante de historias de amor entre chicos, desencadenando una comedia romántica única.",
-        cover: "oni.jpg",
+        cover: "Oni.jpg",
         seasons: [
           {
             num: 1,
@@ -1615,6 +1616,53 @@
           }
         ]
       },
+      31: {
+        title: "To Your Eternity",
+        desc: "Ha sido unos meses desde Kiyoshi renunció a su trabajo para cumplir su sueño de tener un dagashis-ya en las afueras de Tokio. Él quería vivir el resto de su vida viendo niñas. Su plan fue un éxito, con las niñas de la escuela cercana que visitan su tienda todos los días y hablaban con él felizmente como amigos. Sin embargo, poco después que las vacaciones de verano comenzaran, se dio cuenta que una de sus clientes habituales, Chie, robaba algunos dulces. A pesar de que no había mucha pérdida, no podía dejar que se saliera con la suya. Cuando se le preguntó, ella dijo que le iba a compensar por ello mediante el trabajo a tiempo parcial en su tienda. Así comienza sus vacaciones de verano con pequeñas niñas.",
+        cover: "https://www.dropbox.com/scl/fi/du5sn8bt3ie6l4odbsjo6/fumetsu-1.jpg?rlkey=jx3a1v76k20ki639pmwe9v9b3&st=rawxrnvg&raw=1",
+        seasons: [
+          {
+            num: 1,
+            cover: "https://www.dropbox.com/scl/fi/vdhje75y0qrapg2w7bzlm/fumetsu1.jpg?rlkey=cxo830q5q6am7ifdo4o0gy1yw&st=h8yg0yj1&raw=1",
+            eps: [
+              { title: "To Your Eternity T1 Cap 1"},
+              { title: "To Your Eternity T1 Cap 2"},
+              { title: "To Your Eternity T1 Cap 3"},
+              { title: "To Your Eternity T1 Cap 4"},
+              { title: "To Your Eternity T1 Cap 5"},
+              { title: "To Your Eternity T1 Cap 6"},
+              { title: "To Your Eternity T1 Cap 7"},
+              { title: "To Your Eternity T1 Cap 8"},
+              { title: "To Your Eternity T1 Cap 9"},
+              { title: "To Your Eternity T1 Cap 10"},
+              { title: "To Your Eternity T1 Cap 11"},
+              { title: "To Your Eternity T1 Cap 12"},
+              { title: "To Your Eternity T1 Cap 13"},
+              { title: "To Your Eternity T1 Cap 14"},
+              { title: "To Your Eternity T1 Cap 15"},
+              { title: "To Your Eternity T1 Cap 16"},
+              { title: "To Your Eternity T1 Cap 17"},
+              { title: "To Your Eternity T1 Cap 18"},
+              { title: "To Your Eternity T1 Cap 19"},
+              { title: "To Your Eternity T1 Cap 20"},
+            ]
+          },
+          {
+            num: 2,
+            cover: "https://www.dropbox.com/scl/fi/6fgqny1klytu2rgeykusx/fumetsu2.jpg?rlkey=65c92sgt2g3bzm56tc0wsol6i&st=axfb816j&raw=1",
+            eps: [
+              { title: "To Your Eternity T2 Cap 1"},
+            ]
+          },
+          {
+            num: 3,
+            cover: "https://www.dropbox.com/scl/fi/2zghbbzs6lpi2lt6sf7ui/fumetsu3.jpg?rlkey=l8yfxc0yk2u13ie8wemgcuoal&st=t0qoyl96&raw=1",
+            eps: [
+              { title: "To Your Eternity T3 Cap 1"},
+            ]
+          }
+        ]
+      },
       37: {
         title: "Shinsei Kourin Dacryon Luna",
         desc: "En el club de periodismo de la Escuela Privada Etoile, Runa, Reina y Miyu activan la aplicación Angel Maker, lo que desencadena una tragedia. Se convierten en chicas mágicas y luchan contra monstruos deformes, pero un día son capturadas y violadas por ellos. Erika, la chica mágica, las rescata, pero les advierte que si siguen luchando atraerán más ataques. Resulta que la aplicación ha sido maldecida por ángeles caídos. Erika lucha contra ellos, pero su corazón se corrompe.",
@@ -1695,12 +1743,12 @@
 
     // 5) Pausar todos los audios y reproducir OST al primer clic
     (function setupAudio(){
-      const audios = ['dd-ost','jj-ost','kb-music','rz-ost','mt-ost','ts-ost','st-ost','wi-ost','iz-ost','akame-ost','herox-ost','maou2099-ost','al-ost','ra-ost','ki-ost','gorila-ost','heroescudo-ost','ov-ost','shi-ost','goblinslayer-ost','aliester-ost','oni-ost','kaiju8-ost','zootopia-ost','Clevatess-ost','drstone-ost','onepieceliveaction-ost','sr-ost','Shinsei Kourin-ost']
+      const audios = ['dd-ost','jj-ost','kb-music','rz-ost','mt-ost','ts-ost','st-ost','wi-ost','iz-ost','akame-ost','herox-ost','maou2099-ost','al-ost','ra-ost','ki-ost','gorila-ost','heroescudo-ost','ov-ost','shi-ost','goblinslayer-ost','aliester-ost','oni-ost','kaiju8-ost','zootopia-ost','Clevatess-ost','drstone-ost','onepieceliveaction-ost','sr-ost','Toyoureternity-ost','Shinsei Kourin-ost']
         .map(id => document.getElementById(id))
         .filter(el => el);
       audios.forEach(a => { a.pause(); a.currentTime = 0; });
 
-      const playMap = {1:'dd-ost',2:'jj-ost',3:'kb-music',4:'rz-ost',5:'mt-ost',6:'ts-ost',7:'st-ost',8:'akame-ost',9:'herox-ost',11:'maou2099-ost',12:'wi-ost',13:'iz-ost',14:'al-ost',15:'ra-ost',16:'ki-ost',17:'gorila-ost',19:'heroescudo-ost',20:'ov-ost',21:'shi-ost',22:'goblinslayer-ost',23:'aliester-ost',24:'oni-ost',25:'kaiju8-ost',26:'zootopia-ost',27:'Clevatess-ost',28:'drstone-ost',29:'onepieceliveaction-ost',30:'sr-ost',37:'Shinsei Kourin-ost'};
+      const playMap = {1:'dd-ost',2:'jj-ost',3:'kb-music',4:'rz-ost',5:'mt-ost',6:'ts-ost',7:'st-ost',8:'akame-ost',9:'herox-ost',11:'maou2099-ost',12:'wi-ost',13:'iz-ost',14:'al-ost',15:'ra-ost',16:'ki-ost',17:'gorila-ost',19:'heroescudo-ost',20:'ov-ost',21:'shi-ost',22:'goblinslayer-ost',23:'aliester-ost',24:'oni-ost',25:'kaiju8-ost',26:'zootopia-ost',27:'Clevatess-ost',28:'drstone-ost',29:'onepieceliveaction-ost',30:'sr-ost',31:'Toyoureternity-ost',37:'Shinsei Kourin-ost'};
       if (playMap[id]) {
         document.addEventListener('click', ()=>{
           const a = document.getElementById(playMap[id]);
