--- a/video-player.html
+++ b/video-player.html
@@ -1133,6 +1133,30 @@
           "5": { link:'https://www.dropbox.com/scl/fi/n2iaalss7ez17ib1ceolk/shoujoramuness-04.mp4?rlkey=klvlmhftp91dzfodk99s0fz78&st=5b9pc2bn&raw=1', title:'Shoujo Ramune SUB T1 Cap 4' },
         }
       },
+      "31": {
+        "1": {
+          "1": { link:'https://www.dropbox.com/scl/fi/j2vyxsr5fkfys179lwwoy/To-Your-Eternity-T1-Cap-1.mp4?rlkey=stwj98zan0q9s9vih31pl1xra&st=gvw5wczi&raw=1', title:'To Your Eternity T1 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/lu3wv1f03j35j7fsoftvz/To-Your-Eternity-T1-Cap-2.mp4?rlkey=6xl69kcsi9ezkae0tiff2lkcw&st=1fy9az6b&raw=1', title:'To Your Eternity T1 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/xtxz2kvp2lmz2wunhqt9f/To-Your-Eternity-T1-Cap-3.mp4?rlkey=udh6hnulp3ogltz2sa0obe3n2&st=llaomxbn&raw=1', title:'To Your Eternity T1 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/fjs9di8heeoiirxrwkt13/To-Your-Eternity-T1-Cap-4.mp4?rlkey=iqkocsn85vnfhacgy8jb9v407&st=yqa0raod&raw=1', title:'To Your Eternity T1 Cap 4' },
+          "5": { link:'https://www.dropbox.com/scl/fi/5wp7agexxl2a60huc73xh/To-Your-Eternity-T1-Cap-5.mp4?rlkey=dwgujd5kplcegu5i82vcecthq&st=lzlx17m5&raw=1', title:'To Your Eternity T1 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/nhv5sjjiu0rq375h3ja53/To-Your-Eternity-T1-Cap-6.mp4?rlkey=1trx6z75faqxhlatmw70b9lpn&st=ddg964u2&raw=1', title:'To Your Eternity T1 Cap 6' },
+          "7": { link:'https://www.dropbox.com/scl/fi/614775r5fv7nf8jmt7uan/To-Your-Eternity-T1-Cap-7.mp4?rlkey=9w4k64jyd7shdda3mnqaoktfy&st=xxlydwhf&raw=1', title:'To Your Eternity T1 Cap 7' },
+          "8": { link:'https://www.dropbox.com/scl/fi/v3lnjk35cur78khwhotif/To-Your-Eternity-T1-Cap-8.mp4?rlkey=cnbrt60dnuno0jeahh33blu3b&st=314z03d9&raw=1', title:'To Your Eternity T1 Cap 8' },
+          "9": { link:'https://www.dropbox.com/scl/fi/k2nlf553acroufmuu44l9/To-Your-Eternity-T1-Cap-9.mp4?rlkey=g79ktyjcit5w9e06stw7ejsud&st=hrtdhwx6&raw=1', title:'To Your Eternity T1 Cap 9' },
+          "10": { link:'&raw=1', title:'To Your Eternity T1 Cap 10' },
+          "11": { link:'&raw=1', title:'To Your Eternity T1 Cap 11' },
+          "12": { link:'https://www.dropbox.com/scl/fi/u4wtnot2855ijr1jv2zfq/To-Your-Eternity-T1-Cap-12.mp4?rlkey=ow3tsjevw6fseytlexeic09rt&st=2nymf676&raw=1', title:'To Your Eternity T1 Cap 12' },
+          "13": { link:'https://www.dropbox.com/scl/fi/5y5i1fglz7co8d2wemr4j/To-Your-Eternity-T1-Cap-13.mp4?rlkey=9bou6mfk7al8gnzc494a0lsaz&st=8rb3f957&raw=1', title:'To Your Eternity T1 Cap 13' },
+          "14": { link:'https://www.dropbox.com/scl/fi/13bdmszlckbsdwwt42o5u/To-Your-Eternity-T1-Cap-14.mp4?rlkey=eqrrhvhkxb5yw8xriyyb4gll2&st=ntez3ebn&	raw=1', title:'To Your Eternity T1 Cap 14' },
+          "15": { link:'https://www.dropbox.com/scl/fi/sy17vitlfbjnketz7ez73/To-Your-Eternity-T1-Cap-15.mp4?rlkey=qglwbxrxqtyabvqyc1tqnjnov&st=1ygacd38&raw=1', title:'To Your Eternity T1 Cap 15' },
+          "16": { link:'&raw=1', title:'To Your Eternity T1 Cap 16' },
+          "17": { link:'&raw=1', title:'To Your Eternity T1 Cap 17' },
+          "18": { link:'https://www.dropbox.com/scl/fi/0h8fv5lc4evvmpqxsio8r/To-Your-Eternity-T1-Cap-18.mp4?rlkey=xfsvokmlxx8w7idrdg1i56eaa&st=q2ox44p7&raw=1', title:'To Your Eternity T1 Cap 18' },
+          "19": { link:'&raw=1', title:'To Your Eternity T1 Cap 19' },
+          "20": { link:'&raw=1', title:'To Your Eternity T1 Cap 20' },
+        }
+      },
       "37": {
         "1": {
           "1": { link:'https://www.dropbox.com/scl/fi/wiu9vhmz4j83rhz6927lj/Shinsei-Kourin-Dacryon-Luna-Cap-1-Sub-Espa-ol.mp4?rlkey=cijr65vftkrtexv3b21tjdbzz&st=5sit9huw&raw=1', title:'Shinsei Kourin Dacryon Luna SUB Cap 1' },
@@ -1153,7 +1177,7 @@
     // Cargar episodio
     const episode = DB?.[anime]?.[s]?.[e];
     if (!episode) {
-      alert('Capítulo no encontrado.');
+      alert('Próximamente.');
     } else {
       const originalLink = episode.link;
       player.src          = originalLink;
