--- a/anime-detail.html
+++ b/anime-detail.html
@@ -1663,6 +1663,23 @@
           }
         ]
       },
+      32: {
+        title: "Tsugunai Subbed",
+        desc: "En el club de periodismo de la Escuela Privada Etoile, Runa, Reina y Miyu activan la aplicación Angel Maker, lo que desencadena una tragedia. Se convierten en chicas mágicas y luchan contra monstruos deformes, pero un día son capturadas y violadas por ellos. Erika, la chica mágica, las rescata, pero les advierte que si siguen luchando atraerán más ataques. Resulta que la aplicación ha sido maldecida por ángeles caídos. Erika lucha contra ellos, pero su corazón se corrompe.",
+        cover: "https://www.dropbox.com/scl/fi/f3ada5jvt69z0si1f82eo/portadah.jpg?rlkey=l6y1gyidiucos6j2g1gjyp7k3&st=82m33282&raw=1",
+        seasons: [
+          {
+            num: 1,
+            cover: "https://www.dropbox.com/scl/fi/v8frooxr5abe5x2x3gl50/812klau69yL._UF1000-1000_QL80_.jpg?rlkey=rk226u1ypbdil7ykpju9djtpn&st=4ppnwke2&raw=1",
+            eps: [
+              { title: "Tsugunai Subbed Cap 1"},
+              { title: "Tsugunai Subbed Cap 2"},
+              { title: "Tsugunai Subbed Cap 3"},
+              { title: "Tsugunai Subbed Cap 4"},
+            ]
+          }
+        ]
+      },
       37: {
         title: "Shinsei Kourin Dacryon Luna",
         desc: "En el club de periodismo de la Escuela Privada Etoile, Runa, Reina y Miyu activan la aplicación Angel Maker, lo que desencadena una tragedia. Se convierten en chicas mágicas y luchan contra monstruos deformes, pero un día son capturadas y violadas por ellos. Erika, la chica mágica, las rescata, pero les advierte que si siguen luchando atraerán más ataques. Resulta que la aplicación ha sido maldecida por ángeles caídos. Erika lucha contra ellos, pero su corazón se corrompe.",
