--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     </button>
 
     <button id="tiktok-btn" type="button" aria-label="Abrir TikTok en nueva pestaña"
-            onclick="openInNewTab('https://www.tiktok.com/@archiduque8')">
+            onclick="openInNewTab('')">
       <img src="tiktok.jpg" alt="TikTok">
     </button>
 
@@ -363,6 +363,7 @@
       {id:29, title:"One Piece (Live Action)", img:"https://www.dropbox.com/scl/fi/50vo69ws4i64qv4kxibs7/oneeee.jpg?rlkey=ok8a8nt6bh8g0rzzpqisptfoe&st=psff3vov&raw=1", rating:4.8, genres:["Aventura","Comedia","Acción","Fantasía","Drama"]},
       {id:30, title:"Shoujo Ramune", img:"https://www.dropbox.com/scl/fi/ok7pcimnqtue7gg30i70x/shoujo.jpg?rlkey=sl1bn5cj5bmxu003jq2q6906d&st=fd15ap5n&raw=1", rating:4.3, genres:["Hentai","Harem","Incesto"]},
       {id:31, title:"To Your Eternity", img:"https://www.dropbox.com/scl/fi/du5sn8bt3ie6l4odbsjo6/fumetsu-1.jpg?rlkey=jx3a1v76k20ki639pmwe9v9b3&st=rawxrnvg&raw=1", rating:4.8, genres:["Fantasía","Drama","Aventura","Shōnen","Sobrenatural"]},
+      {id:32, title:"Tsugunai Subbed", img:"&raw=1", rating:4.8, genres:["Fantasía","Drama","Aventura","Shōnen","Sobrenatural"]},
       {id:37, title:"Shinsei Kourin Dacryon Luna", img:"https://www.dropbox.com/scl/fi/f3ada5jvt69z0si1f82eo/portadah.jpg?rlkey=l6y1gyidiucos6j2g1gjyp7k3&st=82m33282&raw=1", rating:4.0, genres:["Tentáculos","Hentai","Fantasía","Seinen","Fantasía oscura"]},
     ];
 
