--- a/video-player.html
+++ b/video-player.html
@@ -210,7 +210,9 @@
           "3": { link:'https://www.dropbox.com/scl/fi/vogmosm4yn9bbh39lajgh/Dan-Da-Dan-T2-Cap-3.mp4?rlkey=ccefipzk2d5q3mx8t5fki3i2c&st=494i1yca&raw=1', title:'DAN DA DAN T2 Cap 3' },
           "4": { link:'https://www.dropbox.com/scl/fi/eed4fvyr67oe7sdgd0ylr/DAN-DA-DAN-T2-Cap-4.mp4?rlkey=kvmpwye0fas4siunt202sw6v2&st=8k91pr7n&raw=1', title:'DAN DA DAN T2 Cap 4' },
           "5": { link:'https://www.dropbox.com/scl/fi/bja4u4qk5tt8ykfl24kmo/DAN-DA-DAN-T2-Cap-5.mp4?rlkey=e8kcor08nxfz7f5hnoxbxu3fv&st=bw0rjbh0&raw=1', title:'DAN DA DAN T2 Cap 5' },
-          "6": { link:'https://www.dropbox.com/scl/fi/7aini8cfrjrlv3fh9zd06/DAN-DA-DAN-T2-Cap-6.mp4?rlkey=hsf5o8o506kegfhlpocu1mffn&st=rzebnlkt&&raw=1', title:'DAN DA DAN T2 Cap 6' },
+          "6": { link:'https://www.dropbox.com/scl/fi/7aini8cfrjrlv3fh9zd06/DAN-DA-DAN-T2-Cap-6.mp4?rlkey=hsf5o8o506kegfhlpocu1mffn&st=rzebnlkt&raw=1', title:'DAN DA DAN T2 Cap 6' },
+          "7": { link:'https://www.dropbox.com/scl/fi/7dahj8mn95vjqxpdkoqua/DAN-DA-DAN-T2-Cap-7.mp4?rlkey=94i1osas780y0d7ipvgu0x7j2&st=5tk1fa0o&raw=1', title:'DAN DA DAN T2 Cap 7' },
+          "8": { link:'https://www.dropbox.com/scl/fi/bsyg38ktp14z17ef1xgco/DAN-DA-DAN-T2-Cap-8.mp4?rlkey=q2ors3ape1yj7nurdq2nrzezv&st=05hi1o7l&raw=1', title:'DAN DA DAN T2 Cap 8' },
         }
       },
       "2": {
@@ -1106,7 +1108,7 @@
           "16": { link:'https://www.dropbox.com/scl/fi/rkp66pqhc4xd0c3o2tykb/Dr.-Stone-Temporada-4-Capitulo-16.mp4?rlkey=s4qtyu645uflpsavdt90370og&st=bwrebbpz&raw=1', title:'Dr. Stone T4 Cap 16' },
           "17": { link:'https://www.dropbox.com/scl/fi/kdm5chgbflv4ne2eh9yhn/Dr.-Stone-Temporada-4-Capitulo-17.mp4?rlkey=g24438qveahtq1rkvi3s5gxd6&st=wvu7l5xr&raw=1', title:'Dr. Stone T4 Cap 17' },
           "18": { link:'https://www.dropbox.com/scl/fi/yvhscbmobhkm1llpdovmv/Dr.-Stone-Temporada-4-Capitulo-18.mp4?rlkey=frkoj8sj3zd5oamgu1iivho6o&st=8itmbong&raw=1', title:'Dr. Stone T4 Cap 18' },
-          "19": { link:'&raw=1', title:'Dr. Stone T4 Cap 19' },
+          "19": { link:'https://www.dropbox.com/scl/fi/p7zypzyp7j7p4dh7ltdro/Dr.-Stone-Temporada-4-Capitulo-19.mp4?rlkey=oewatrsjovz67r61t032agk6b&st=zcber1o6&raw=1', title:'Dr. Stone T4 Cap 19' },
           "20": { link:'&raw=1', title:'Dr. Stone T4 Cap 20' },
           "21": { link:'&raw=1', title:'Dr. Stone T4 Cap 21' },
           "22": { link:'&raw=1', title:'Dr. Stone T4 Cap 22' },
@@ -1144,17 +1146,32 @@
           "7": { link:'https://www.dropbox.com/scl/fi/614775r5fv7nf8jmt7uan/To-Your-Eternity-T1-Cap-7.mp4?rlkey=9w4k64jyd7shdda3mnqaoktfy&st=xxlydwhf&raw=1', title:'To Your Eternity T1 Cap 7' },
           "8": { link:'https://www.dropbox.com/scl/fi/v3lnjk35cur78khwhotif/To-Your-Eternity-T1-Cap-8.mp4?rlkey=cnbrt60dnuno0jeahh33blu3b&st=314z03d9&raw=1', title:'To Your Eternity T1 Cap 8' },
           "9": { link:'https://www.dropbox.com/scl/fi/k2nlf553acroufmuu44l9/To-Your-Eternity-T1-Cap-9.mp4?rlkey=g79ktyjcit5w9e06stw7ejsud&st=hrtdhwx6&raw=1', title:'To Your Eternity T1 Cap 9' },
-          "10": { link:'&raw=1', title:'To Your Eternity T1 Cap 10' },
-          "11": { link:'&raw=1', title:'To Your Eternity T1 Cap 11' },
+          "10": { link:'https://www.dropbox.com/scl/fi/zcl5i8q9jfbikfsnjhqpj/To-Your-Eternity-T1-Cap-10.mp4?rlkey=se0zdbfoy0u1k1hd7lw7at1za&st=d9jtc4sc&raw=1', title:'To Your Eternity T1 Cap 10' },
+          "11": { link:'https://www.dropbox.com/scl/fi/bkt66bq974wyqqhh4wd4w/To-Your-Eternity-T1-Cap-11.mp4?rlkey=70os8xed68bam6s8z9s902eug&st=4kr3wlg8&raw=1', title:'To Your Eternity T1 Cap 11' },
           "12": { link:'https://www.dropbox.com/scl/fi/u4wtnot2855ijr1jv2zfq/To-Your-Eternity-T1-Cap-12.mp4?rlkey=ow3tsjevw6fseytlexeic09rt&st=2nymf676&raw=1', title:'To Your Eternity T1 Cap 12' },
           "13": { link:'https://www.dropbox.com/scl/fi/5y5i1fglz7co8d2wemr4j/To-Your-Eternity-T1-Cap-13.mp4?rlkey=9bou6mfk7al8gnzc494a0lsaz&st=8rb3f957&raw=1', title:'To Your Eternity T1 Cap 13' },
-          "14": { link:'https://www.dropbox.com/scl/fi/13bdmszlckbsdwwt42o5u/To-Your-Eternity-T1-Cap-14.mp4?rlkey=eqrrhvhkxb5yw8xriyyb4gll2&st=ntez3ebn&	raw=1', title:'To Your Eternity T1 Cap 14' },
+          "14": { link:'https://www.dropbox.com/scl/fi/13bdmszlckbsdwwt42o5u/To-Your-Eternity-T1-Cap-14.mp4?rlkey=eqrrhvhkxb5yw8xriyyb4gll2&st=ntez3ebn&raw=1', title:'To Your Eternity T1 Cap 14' },
           "15": { link:'https://www.dropbox.com/scl/fi/sy17vitlfbjnketz7ez73/To-Your-Eternity-T1-Cap-15.mp4?rlkey=qglwbxrxqtyabvqyc1tqnjnov&st=1ygacd38&raw=1', title:'To Your Eternity T1 Cap 15' },
-          "16": { link:'&raw=1', title:'To Your Eternity T1 Cap 16' },
-          "17": { link:'&raw=1', title:'To Your Eternity T1 Cap 17' },
+          "16": { link:'https://www.dropbox.com/scl/fi/zowrpx4jc909vlwcjhurn/To-Your-Eternity-T1-Cap-16.mp4?rlkey=g9k9qjtgilokcjlx8h5y6490y&st=8m1bhyut&raw=1', title:'To Your Eternity T1 Cap 16' },
+          "17": { link:'https://www.dropbox.com/scl/fi/z4unoz0z0am407jzd9tcs/To-Your-Eternity-T1-Cap-17.mp4?rlkey=kok82fp1x06rtnvi1mk0gfl2a&st=z2o8o6b9&&raw=1', title:'To Your Eternity T1 Cap 17' },
           "18": { link:'https://www.dropbox.com/scl/fi/0h8fv5lc4evvmpqxsio8r/To-Your-Eternity-T1-Cap-18.mp4?rlkey=xfsvokmlxx8w7idrdg1i56eaa&st=q2ox44p7&raw=1', title:'To Your Eternity T1 Cap 18' },
-          "19": { link:'&raw=1', title:'To Your Eternity T1 Cap 19' },
-          "20": { link:'&raw=1', title:'To Your Eternity T1 Cap 20' },
+          "19": { link:'https://www.dropbox.com/scl/fi/owlxbr919ix5t9uo520pq/To-Your-Eternity-T1-Cap-19.mp4?rlkey=xmm5xrmfwa3f3jegd7bpq7k8d&st=7wb88qdo&raw=1', title:'To Your Eternity T1 Cap 19' },
+          "20": { link:'https://www.dropbox.com/scl/fi/sh57nnr270pmifbbtehun/To-Your-Eternity-T1-Cap-20.mp4?rlkey=4ljs6jbzphcz0ba33p9qgg9y6&st=lcmoris3&raw=1', title:'To Your Eternity T1 Cap 20' },
+        },
+        "2": {
+          "1": { link:'https://www.dropbox.com/scl/fi/zcpztdxnojxa9drtysxb6/To-Your-Eternity-T2-Cap-1.mp4?rlkey=xuehjoh9nep0o5gzue1r82r4c&st=ivfah0ec&raw=1', title:'To Your Eternity T1 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/wxgnvk1vtsgjf1e9kp4ce/To-Your-Eternity-T2-Cap-2.mp4?rlkey=701vvdzzrtc60vzmp2i9rjzk1&st=2hz213gr&raw=1', title:'To Your Eternity T1 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/3d68ddnxfpxfrz6dejco0/To-Your-Eternity-T2-Cap-3.mp4?rlkey=fy2v7qlo0m9cr9vya843yt61j&st=on7tpepy&raw=1', title:'To Your Eternity T1 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/8r47jhl3insl126j3o7kv/To-Your-Eternity-T2-Cap-4.mp4?rlkey=qmv5dh6ykgz4eax9h6u4rwpzt&st=uuei6w3j&raw=1', title:'To Your Eternity T1 Cap 4' },
+          "5": { link:'&raw=1', title:'To Your Eternity T1 Cap 5' },
+        }
+      },
+      "32": {
+        "1": {
+          "1": { link:'https://www.dropbox.com/scl/fi/kj79c7ts1h7p70wtqbb3y/Tsugunai-Subbed-Cap-1.mp4?rlkey=eog59ldhku6wwqovibjfgr9r1&st=4vunfix2&raw=1', title:'Tsugunai Subbed SUB Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/8trdqujmfiac8zmwqk55f/Tsugunai-Subbed-Cap-2.mp4?rlkey=44ggx7uhpwwpeyg8bf10r8s3p&st=jcdeqcr1&raw=1', title:'Tsugunai Subbed SUB Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/6lqaol686fkktk16o2jgl/Tsugunai-Subbed-Cap-3.mp4?rlkey=kmpx130t8n8vknwu5pnswy4qv&st=59c1uubg&raw=1', title:'Tsugunai Subbed SUB Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/ytpnotvj9rurxs20nwxmk/Tsugunai-Subbed-Cap-4.mp4?rlkey=f9h9k3olzzyzlosstu3u34g0v&st=eb8imc60&raw=1', title:'Tsugunai Subbed SUB Cap 4' },
         }
       },
       "37": {
