--- a/anime-detail.html
+++ b/anime-detail.html
@@ -134,6 +134,7 @@
   <audio id="sr-ost" loop><source src="https://www.dropbox.com/scl/fi/1o7env4rkr3ol8gfdnumr/Shoujo-Ramune-Anime-Opening-OVA-OP.mp3?rlkey=xqiqtoj22rmc8znm9k8p5pfdw&st=wjprsjpj&raw=1" type="audio/mpeg"></audio>
   <audio id="onepieceliveaction-ost" loop><source src="https://www.dropbox.com/scl/fi/o1360gju7gld8ay7uxa05/We-Are.-OP.-1-One-Piece.-Traduccion-Al-Espa-ol.mp3?rlkey=0evbf7rq48un13wfa381wh475&st=fxe5vp0h&raw=1" type="audio/mpeg"></audio>
   <audio id="Toyoureternity-ost" loop><source src="https://www.dropbox.com/scl/fi/pb85oa1z2xbqg102rrgkt/To-Your-Eternity-Opening-Hikaru-Utada-Pink-Blood-Sub-Espa-ol-Lyrics-Romaji.mp3?rlkey=k38if490kn1hroj8f1xiw3d31&st=0bp9ge5z&raw=1" type="audio/mpeg"></audio>
+  <audio id="Tsugunaisubbed-ost" loop><source src="https://www.dropbox.com/scl/fi/ws43puqypfnbhi9g3rt8j/V-deo-sin-t-tulo-Hecho-con-Clipchamp-4-mp3cut.net.mp3?rlkey=ia1z74fp7swyybdnmkxicoqlj&st=p89beigl&raw=1" type="audio/mpeg"></audio>
   <audio id="Shinsei Kourin-ost" loop><source src="https://www.dropbox.com/scl/fi/x8m4ib42z3wkzav2iljem/Ending-Shinsei-Kourin-Dacryon.mp3?rlkey=xdatk5v3lsmpf82ydscl0i9lc&st=1h30p4qk&raw=1" type="audio/mpeg"></audio>
 
   <!-- CONTENEDOR PRINCIPAL -->
@@ -1665,12 +1666,12 @@
       },
       32: {
         title: "Tsugunai Subbed",
-        desc: "En el club de periodismo de la Escuela Privada Etoile, Runa, Reina y Miyu activan la aplicación Angel Maker, lo que desencadena una tragedia. Se convierten en chicas mágicas y luchan contra monstruos deformes, pero un día son capturadas y violadas por ellos. Erika, la chica mágica, las rescata, pero les advierte que si siguen luchando atraerán más ataques. Resulta que la aplicación ha sido maldecida por ángeles caídos. Erika lucha contra ellos, pero su corazón se corrompe.",
-        cover: "https://www.dropbox.com/scl/fi/f3ada5jvt69z0si1f82eo/portadah.jpg?rlkey=l6y1gyidiucos6j2g1gjyp7k3&st=82m33282&raw=1",
+        desc: "Nuestro mc vive con su hermana, Nana, después de que sus padres murieran en un accidente. Crecieron compartiendo momentos tristes y felices juntos. Pero un día, Nana tuvo que pasar por una vida terrible, fue asaltada por un grupo de hombres ricos y quedó extremadamente traumatizada. Quería vengarse de esos sucios hombres ricos. Mc se convierte en profesor de secundaria donde estudia la hija de los ricos. Después de retomar el momento, los invitó a una villa remota para recibir clases complementarias. Cerró la puerta para asegurarse de que ninguno de ellos escapara y se vengara por primera vez de la chica llamada Ruriko, que tenía el mayor respeto por su asqueroso padre que agredió a la hermana de mc. El resto de la chica trató de huir, pero ¿serán capaces de escapar de la ira de mc?",
+        cover: "https://www.dropbox.com/scl/fi/hkyj8asfbi0lw4kyuzjvk/71Bk-zdlprL-1.jpg?rlkey=g875hho1bd55nyaqo4p2hh9ek&st=f0h9rkpl&raw=1",
         seasons: [
           {
             num: 1,
-            cover: "https://www.dropbox.com/scl/fi/v8frooxr5abe5x2x3gl50/812klau69yL._UF1000-1000_QL80_.jpg?rlkey=rk226u1ypbdil7ykpju9djtpn&st=4ppnwke2&raw=1",
+            cover: "https://www.dropbox.com/scl/fi/ruk16o8fpf448j739rdi7/1n8KjfuP_o-1.jpg?rlkey=ac1scvwpd8swujz8g2k1bkwkm&st=h1cva2z5&raw=1",
             eps: [
               { title: "Tsugunai Subbed Cap 1"},
               { title: "Tsugunai Subbed Cap 2"},
@@ -1760,12 +1761,12 @@
 
     // 5) Pausar todos los audios y reproducir OST al primer clic
     (function setupAudio(){
-      const audios = ['dd-ost','jj-ost','kb-music','rz-ost','mt-ost','ts-ost','st-ost','wi-ost','iz-ost','akame-ost','herox-ost','maou2099-ost','al-ost','ra-ost','ki-ost','gorila-ost','heroescudo-ost','ov-ost','shi-ost','goblinslayer-ost','aliester-ost','oni-ost','kaiju8-ost','zootopia-ost','Clevatess-ost','drstone-ost','onepieceliveaction-ost','sr-ost','Toyoureternity-ost','Shinsei Kourin-ost']
+      const audios = ['dd-ost','jj-ost','kb-music','rz-ost','mt-ost','ts-ost','st-ost','wi-ost','iz-ost','akame-ost','herox-ost','maou2099-ost','al-ost','ra-ost','ki-ost','gorila-ost','heroescudo-ost','ov-ost','shi-ost','goblinslayer-ost','aliester-ost','oni-ost','kaiju8-ost','zootopia-ost','Clevatess-ost','drstone-ost','onepieceliveaction-ost','sr-ost','Toyoureternity-ost','Tsugunaisubbed-ost','Shinsei Kourin-ost']
         .map(id => document.getElementById(id))
         .filter(el => el);
       audios.forEach(a => { a.pause(); a.currentTime = 0; });
 
-      const playMap = {1:'dd-ost',2:'jj-ost',3:'kb-music',4:'rz-ost',5:'mt-ost',6:'ts-ost',7:'st-ost',8:'akame-ost',9:'herox-ost',11:'maou2099-ost',12:'wi-ost',13:'iz-ost',14:'al-ost',15:'ra-ost',16:'ki-ost',17:'gorila-ost',19:'heroescudo-ost',20:'ov-ost',21:'shi-ost',22:'goblinslayer-ost',23:'aliester-ost',24:'oni-ost',25:'kaiju8-ost',26:'zootopia-ost',27:'Clevatess-ost',28:'drstone-ost',29:'onepieceliveaction-ost',30:'sr-ost',31:'Toyoureternity-ost',37:'Shinsei Kourin-ost'};
+      const playMap = {1:'dd-ost',2:'jj-ost',3:'kb-music',4:'rz-ost',5:'mt-ost',6:'ts-ost',7:'st-ost',8:'akame-ost',9:'herox-ost',11:'maou2099-ost',12:'wi-ost',13:'iz-ost',14:'al-ost',15:'ra-ost',16:'ki-ost',17:'gorila-ost',19:'heroescudo-ost',20:'ov-ost',21:'shi-ost',22:'goblinslayer-ost',23:'aliester-ost',24:'oni-ost',25:'kaiju8-ost',26:'zootopia-ost',27:'Clevatess-ost',28:'drstone-ost',29:'onepieceliveaction-ost',30:'sr-ost',31:'Toyoureternity-ost',32:'Tsugunaisubbed-ost',37:'Shinsei Kourin-ost'};
       if (playMap[id]) {
         document.addEventListener('click', ()=>{
           const a = document.getElementById(playMap[id]);
