--- a/video-player.html
+++ b/video-player.html
@@ -664,7 +664,7 @@
           "18": { link:'https://www.dropbox.com/scl/fi/cejhkc4krklbeyt1z2daf/To-Be-Hero-X-Cap-18.mp4?rlkey=iuuan20b3qpugpqwy8bs9z7by&st=iqmdrbdl&raw=1', title:'To Be Hero X T1 Cap 18' },
           "19": { link:'https://www.dropbox.com/scl/fi/naldcku7l4sjmhdm6a4j8/To-Be-Hero-X-Cap-19.mp4?rlkey=gmr4rpdbdn7oqj5lme85s7htv&st=cp1skbw0&raw=1', title:'To Be Hero X T1 Cap 19' },
           "20": { link:'https://www.dropbox.com/scl/fi/spbtwk5bktqy709vq5u1y/To-Be-Hero-X-Cap-20.mp4?rlkey=hjs520pkn5sm2biuxxn59p62o&st=il41a4rz&raw=1', title:'To Be Hero X T1 Cap 20' },
-          "21": { link:'&raw=1', title:'To Be Hero X T1 Cap 21' },
+          "21": { link:'https://www.dropbox.com/scl/fi/7u4u7rga0ied7sl5owvez/To-Be-Hero-X-T1-Cap-21.mp4?rlkey=471mvp9h0y0p8d4ydurqjivrz&st=s7ydz9re&raw=1', title:'To Be Hero X T1 Cap 21' },
           "22": { link:'&raw=1', title:'To Be Hero X T1 Cap 22' },
           "23": { link:'&raw=1', title:'To Be Hero X T1 Cap 23' },
           "24": { link:'&raw=1', title:'To Be Hero X T1 Cap 24' },
@@ -861,12 +861,12 @@
           "4": { link:'https://www.dropbox.com/scl/fi/u2x6ks5fmbt6gjiyquy2n/The-Rising-of-the-Shield-Hero-T4-Cap-4.mp4?rlkey=g0l3c87fyk91ut5on2dj4befg&st=qn8yovlm&raw=1', title:'The Rising of the Shield Hero T4 Cap 4' },
           "5": { link:'https://www.dropbox.com/scl/fi/1xtfvj0aiy0wojl6uef9p/The-Rising-of-the-Shield-Hero-T4-Cap-5.mp4?rlkey=nh3s8g4ufmi4xf8el4a7adhns&st=ibbwvc1z&raw=1', title:'The Rising of the Shield Hero T4 Cap 5' },
           "6": { link:'https://www.dropbox.com/scl/fi/2xmq1nryqor4bzlm6swbp/The-Rising-of-the-Shield-Hero-T4-Cap-6.mp4?rlkey=qsoo5ezdrweqlfgsvr8qnz949&st=z3u9kskj&raw=1', title:'The Rising of the Shield Hero T4 Cap 6' },
-          "7": { link:'https://www.dropbox.com/scl/fi/ikwntozllu712yu3rfvui/The-Rising-of-the-Shield-Hero-T3-Cap-7.mp4?rlkey=0m2ux7aq29i8iqm0se80ehkys&st=wvh5fne1&raw=1', title:'The Rising of the Shield Hero T4 Cap 7' },
-          "8": { link:'https://www.dropbox.com/scl/fi/f2gjhiou96iyxtm99xv2e/The-Rising-of-the-Shield-Hero-T3-Cap-8.mp4?rlkey=s3k23ogt9uvjm6o9snh5mz7l8&st=9ih6tkeb&raw=1', title:'The Rising of the Shield Hero T4 Cap 8' },
-          "9": { link:'https://www.dropbox.com/scl/fi/p8t577l54ag1twq9j1ijp/The-Rising-of-the-Shield-Hero-T3-Cap-9.mp4?rlkey=8xek3zmvhggxcgloq9fcxkxzh&st=ts35c2dz&&raw=1', title:'The Rising of the Shield Hero T4 Cap 9' },
-          "10": { link:'https://www.dropbox.com/scl/fi/srs4ik16d1gthsunwdb82/The-Rising-of-the-Shield-Hero-T3-Cap-10.mp4?rlkey=jye5v7h1r12xec2n1pocx1qf3&st=skodebwa&raw=1', title:'The Rising of the Shield Hero T4 Cap 10' },
-          "11": { link:'https://www.dropbox.com/scl/fi/yeqva7asxtnqlmg9n80k9/The-Rising-of-the-Shield-Hero-T3-Cap-11.mp4?rlkey=010z9dgvzw7do4l1vpai14asz&st=mkvyud4j&raw=1', title:'The Rising of the Shield Hero T4 Cap 11' },
-          "12": { link:'https://www.dropbox.com/scl/fi/kzysz68cq1xc19tph2rkm/The-Rising-of-the-Shield-Hero-T3-Cap-12.mp4?rlkey=qni37tpvj9j1y6h49sgzvhx9d&st=vdii5d56&raw=1', title:'The Rising of the Shield Hero T4 Cap 12' },
+          "7": { link:'&raw=1', title:'The Rising of the Shield Hero T4 Cap 7' },
+          "8": { link:'&raw=1', title:'The Rising of the Shield Hero T4 Cap 8' },
+          "9": { link:'&raw=1', title:'The Rising of the Shield Hero T4 Cap 9' },
+          "10": { link:'&raw=1', title:'The Rising of the Shield Hero T4 Cap 10' },
+          "11": { link:'&raw=1', title:'The Rising of the Shield Hero T4 Cap 11' },
+          "12": { link:'&raw=1', title:'The Rising of the Shield Hero T4 Cap 12' },
         }
       },
       "20": {
@@ -989,13 +989,13 @@
           "3": { link:'https://www.dropbox.com/scl/fi/zymjj2kffrs0njgpa7rmh/Kaiju-No.-8-T2-Cap-3.mp4?rlkey=f0pcfim6ws8o5v9ztzedtr44m&st=yh8mn3gc&raw=1', title:'Kaiju No. 8 T2 Cap 3' },
           "4": { link:'https://www.dropbox.com/scl/fi/b0s0yt408e1jv8oq8gcgs/Kaiju-No.-8-T2-Cap-4.mp4?rlkey=th0vbzd9bw3a8qnj49557vv3r&st=u29ncg1p&raw=1', title:'Kaiju No. 8 T2 Cap 4' },
           "5": { link:'https://www.dropbox.com/scl/fi/95q9p2afam8wxov8af5d3/Kaiju-No.-8-T2-Cap-5.mp4?rlkey=nbve7du4759k0cn9wc9npiugi&st=ldm6yzyo&raw=1', title:'Kaiju No. 8 T2 Cap 5' },
-          "6": { link:'https://www.dropbox.com/scl/fi/dvzgcsyn7o39mw6gr3y3e/Kaiju-No.-8-T1-Capitulo-6.mp4?rlkey=p0aiv5r1a2c7ktrkuczujym9d&st=26jeyyp6&raw=1', title:'Kaiju No. 8 T2 Cap 6' },
-          "7": { link:'https://www.dropbox.com/scl/fi/xvvpzvzdq59vz2otr2mvd/Kaiju-No.-8-T1-Capitulo-7.mp4?rlkey=l3bcb7o1rddopp9d5r3gky2y1&st=8imtdw9a&raw=1', title:'Kaiju No. 8 T2 Cap 7' },
-          "8": { link:'https://www.dropbox.com/scl/fi/ri5bklh4f3h5yyatto9v1/Kaiju-No.-8-T1-Capitulo-8.mp4?rlkey=dznwmurjb6so2692zrtubb0i0&st=esr5nfbi&raw=1', title:'Kaiju No. 8 T2 Cap 8' },
-          "9": { link:'https://www.dropbox.com/scl/fi/ckbj26wzt82u8ayyn91og/Kaiju-No.-8-T1-Capitulo-9.mp4?rlkey=wvh3uonm9uhxpcionlk76uldz&st=di06vymq&raw=1', title:'Kaiju No. 8 T2 Cap 9' },
-          "10": { link:'https://www.dropbox.com/scl/fi/bngh9lzjgmkbf80b715jg/Kaiju-No.-8-T1-Capitulo-10.mp4?rlkey=hnqbr5ahcy6cfziqyrqrmgioq&st=hs6hlywq&raw=1', title:'Kaiju No. 8 T2 Cap 10' },
-          "11": { link:'https://www.dropbox.com/scl/fi/rkdkqf7onzphyi7vc6269/Kaiju-No.-8-T1-Capitulo-11.mp4?rlkey=m7rq3rdaa8gyh7y9nyrkllkid&st=joeyg38g&raw=1', title:'Kaiju No. 8 T2 Cap 11' },
-          "12": { link:'https://www.dropbox.com/scl/fi/06vqea4hfanhckrandhul/Kaiju-No.-8-T1-Capitulo-12.mp4?rlkey=vd3ke3jxeh1kzbt56te1qnv5s&st=xi1yx3td&raw=1', title:'Kaiju No. 8 T2 Cap 12' },
+          "6": { link:'https://www.dropbox.com/scl/fi/lg081b9m5gl7uci9wwd1z/Kaiju-No.-8-T2-Cap-6.mp4?rlkey=6r2sf5fl89k52vjs9tpv49e42&st=j3fhzdy8&raw=1', title:'Kaiju No. 8 T2 Cap 6' },
+          "7": { link:'&raw=1', title:'Kaiju No. 8 T2 Cap 7' },
+          "8": { link:'&raw=1', title:'Kaiju No. 8 T2 Cap 8' },
+          "9": { link:'&raw=1', title:'Kaiju No. 8 T2 Cap 9' },
+          "10": { link:'&raw=1', title:'Kaiju No. 8 T2 Cap 10' },
+          "11": { link:'&raw=1', title:'Kaiju No. 8 T2 Cap 11' },
+          "12": { link:'&raw=1', title:'Kaiju No. 8 T2 Cap 12' },
         }
       },
       "26": {
@@ -1159,11 +1159,26 @@
           "20": { link:'https://www.dropbox.com/scl/fi/sh57nnr270pmifbbtehun/To-Your-Eternity-T1-Cap-20.mp4?rlkey=4ljs6jbzphcz0ba33p9qgg9y6&st=lcmoris3&raw=1', title:'To Your Eternity T1 Cap 20' },
         },
         "2": {
-          "1": { link:'https://www.dropbox.com/scl/fi/zcpztdxnojxa9drtysxb6/To-Your-Eternity-T2-Cap-1.mp4?rlkey=xuehjoh9nep0o5gzue1r82r4c&st=ivfah0ec&raw=1', title:'To Your Eternity T1 Cap 1' },
-          "2": { link:'https://www.dropbox.com/scl/fi/wxgnvk1vtsgjf1e9kp4ce/To-Your-Eternity-T2-Cap-2.mp4?rlkey=701vvdzzrtc60vzmp2i9rjzk1&st=2hz213gr&raw=1', title:'To Your Eternity T1 Cap 2' },
-          "3": { link:'https://www.dropbox.com/scl/fi/3d68ddnxfpxfrz6dejco0/To-Your-Eternity-T2-Cap-3.mp4?rlkey=fy2v7qlo0m9cr9vya843yt61j&st=on7tpepy&raw=1', title:'To Your Eternity T1 Cap 3' },
-          "4": { link:'https://www.dropbox.com/scl/fi/8r47jhl3insl126j3o7kv/To-Your-Eternity-T2-Cap-4.mp4?rlkey=qmv5dh6ykgz4eax9h6u4rwpzt&st=uuei6w3j&raw=1', title:'To Your Eternity T1 Cap 4' },
-          "5": { link:'&raw=1', title:'To Your Eternity T1 Cap 5' },
+          "1": { link:'https://www.dropbox.com/scl/fi/zcpztdxnojxa9drtysxb6/To-Your-Eternity-T2-Cap-1.mp4?rlkey=xuehjoh9nep0o5gzue1r82r4c&st=ivfah0ec&raw=1', title:'To Your Eternity T2 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/wxgnvk1vtsgjf1e9kp4ce/To-Your-Eternity-T2-Cap-2.mp4?rlkey=701vvdzzrtc60vzmp2i9rjzk1&st=2hz213gr&raw=1', title:'To Your Eternity T2 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/3d68ddnxfpxfrz6dejco0/To-Your-Eternity-T2-Cap-3.mp4?rlkey=fy2v7qlo0m9cr9vya843yt61j&st=on7tpepy&raw=1', title:'To Your Eternity T2 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/8r47jhl3insl126j3o7kv/To-Your-Eternity-T2-Cap-4.mp4?rlkey=qmv5dh6ykgz4eax9h6u4rwpzt&st=uuei6w3j&raw=1', title:'To Your Eternity T2 Cap 4' },
+          "5": { link:'https://www.dropbox.com/scl/fi/j7zkd5b2qa9tuouktyk6m/To-Your-Eternity-T2-Cap-5.mp4?rlkey=iysxh54ysbl9sstix5zf045n7&st=i7i143ms&raw=1', title:'To Your Eternity T2 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/fajb5fuf4zu8tqb8ypns5/To-Your-Eternity-T2-Cap-6.mp4?rlkey=i0f6hvnplnx8tqosxx5ojprtr&st=orpgn0e9&raw=1', title:'To Your Eternity T2 Cap 6' },
+          "7": { link:'https://www.dropbox.com/scl/fi/mqfsycy7lzrdyd5vv70la/To-Your-Eternity-T2-Cap-7.mp4?rlkey=poij17mu2vr19rmnjw57j9wn6&st=11a91el0&raw=1', title:'To Your Eternity T2 Cap 7' },
+          "8": { link:'https://www.dropbox.com/scl/fi/ma1be45tk4z1pblvb3uyr/To-Your-Eternity-T2-Cap-8.mp4?rlkey=z0ymq59bl31rbaj1u5sul35r0&st=5cdwmynq&raw=1', title:'To Your Eternity T2 Cap 8' },
+          "9": { link:'https://www.dropbox.com/scl/fi/wpwrdz1z5dyvu6nvxxm8o/To-Your-Eternity-T2-Cap-9.mp4?rlkey=8drb3cix3pr5ervj4pdfn8h8o&st=kb9x7jgn&raw=1', title:'To Your Eternity T2 Cap 9' },
+          "10": { link:'https://www.dropbox.com/scl/fi/rih3pfsqvc15yyodk90ex/To-Your-Eternity-T2-Cap-10.mp4?rlkey=1vgx8vxgakw2ljppzod4tdvk2&st=w697f8nq&raw=1', title:'To Your Eternity T2 Cap 10' },
+          "11": { link:'https://www.dropbox.com/scl/fi/wqcmxm7n5d289skauqybu/To-Your-Eternity-T2-Cap-11.mp4?rlkey=yht6i3e444h37fx2cbkt5t38k&st=ppxti5gm&raw=1', title:'To Your Eternity T2 Cap 11' },
+          "12": { link:'https://www.dropbox.com/scl/fi/in3b5n3rkt1aatg14kay7/To-Your-Eternity-T2-Cap-12.mp4?rlkey=1bry46wolqjgarabnvgal0oau&st=esh3bgbo&raw=1', title:'To Your Eternity T2 Cap 12' },
+          "13": { link:'https://www.dropbox.com/scl/fi/tjxkfwo9kqvqwd53nw107/To-Your-Eternity-T2-Cap-13.mp4?rlkey=drexh2753h8g3nl87vo3l3g86&st=9ex2f730&raw=1', title:'To Your Eternity T2 Cap 13' },
+          "14": { link:'https://www.dropbox.com/scl/fi/rxpsh27ufj276s4yya8z8/To-Your-Eternity-T2-Cap-14.mp4?rlkey=a8mmwxlugbauu090cfehhd22y&st=f8d3nsfm&raw=1', title:'To Your Eternity T2 Cap 14' },
+          "15": { link:'https://www.dropbox.com/scl/fi/sum686at8p9xcajnkrcoq/To-Your-Eternity-T2-Cap-15.mp4?rlkey=8xipo7fi519l7smiwvzgjhvmh&st=9x57i0fm&raw=1', title:'To Your Eternity T2 Cap 15' },
+          "16": { link:'https://www.dropbox.com/scl/fi/9g0dx8kmccfqxu1ap5bbl/To-Your-Eternity-T2-Cap-16.mp4?rlkey=crtgc42o5gpvpjnjg29yfki7v&st=miuibuhr&raw=1', title:'To Your Eternity T2 Cap 16' },
+          "17": { link:'https://www.dropbox.com/scl/fi/g7of0oq7ve1xyf1qwlia1/To-Your-Eternity-T2-Cap-17.mp4?rlkey=0t0wdrskpcelk15qz8tb3lnl7&st=cxllknap&raw=1', title:'To Your Eternity T2 Cap 17' },
+          "18": { link:'https://www.dropbox.com/scl/fi/fkvyramh4d7emv3f0lbwy/To-Your-Eternity-T2-Cap-18.mp4?rlkey=pg99tlfrv9wdvd723u4dx5dcb&st=x665d4hw&raw=1', title:'To Your Eternity T2 Cap 18' },
+          "19": { link:'https://www.dropbox.com/scl/fi/gb0qkyojsd4u620lxbs7g/To-Your-Eternity-T2-Cap-19.mp4?rlkey=86sr1znbcnhj9f3k3t92x2bjw&st=7zl7dm82&raw=1', title:'To Your Eternity T2 Cap 19' },
+          "20": { link:'https://www.dropbox.com/scl/fi/70zh60alj64ti9s3bvkhp/To-Your-Eternity-T2-Cap-20.mp4?rlkey=cm1i87kos73ujc1qdb1fewpo4&st=ms980t4l&raw=1', title:'To Your Eternity T2 Cap 20' },
         }
       },
       "32": {
