--- a/anime-detail.html
+++ b/anime-detail.html
@@ -1653,6 +1653,25 @@
             cover: "https://www.dropbox.com/scl/fi/6fgqny1klytu2rgeykusx/fumetsu2.jpg?rlkey=65c92sgt2g3bzm56tc0wsol6i&st=axfb816j&raw=1",
             eps: [
               { title: "To Your Eternity T2 Cap 1"},
+              { title: "To Your Eternity T2 Cap 2"},
+              { title: "To Your Eternity T2 Cap 3"},
+              { title: "To Your Eternity T2 Cap 4"},
+              { title: "To Your Eternity T2 Cap 5"},
+              { title: "To Your Eternity T2 Cap 6"},
+              { title: "To Your Eternity T2 Cap 7"},
+              { title: "To Your Eternity T2 Cap 8"},
+              { title: "To Your Eternity T2 Cap 9"},
+              { title: "To Your Eternity T2 Cap 10"},
+              { title: "To Your Eternity T2 Cap 11"},
+              { title: "To Your Eternity T2 Cap 12"},
+              { title: "To Your Eternity T2 Cap 13"},
+              { title: "To Your Eternity T2 Cap 14"},
+              { title: "To Your Eternity T2 Cap 15"},
+              { title: "To Your Eternity T2 Cap 16"},
+              { title: "To Your Eternity T2 Cap 17"},
+              { title: "To Your Eternity T2 Cap 18"},
+              { title: "To Your Eternity T2 Cap 19"},
+              { title: "To Your Eternity T2 Cap 20"},
             ]
           },
           {
