--- a/video-player.html
+++ b/video-player.html
@@ -861,7 +861,7 @@
           "4": { link:'https://www.dropbox.com/scl/fi/u2x6ks5fmbt6gjiyquy2n/The-Rising-of-the-Shield-Hero-T4-Cap-4.mp4?rlkey=g0l3c87fyk91ut5on2dj4befg&st=qn8yovlm&raw=1', title:'The Rising of the Shield Hero T4 Cap 4' },
           "5": { link:'https://www.dropbox.com/scl/fi/1xtfvj0aiy0wojl6uef9p/The-Rising-of-the-Shield-Hero-T4-Cap-5.mp4?rlkey=nh3s8g4ufmi4xf8el4a7adhns&st=ibbwvc1z&raw=1', title:'The Rising of the Shield Hero T4 Cap 5' },
           "6": { link:'https://www.dropbox.com/scl/fi/2xmq1nryqor4bzlm6swbp/The-Rising-of-the-Shield-Hero-T4-Cap-6.mp4?rlkey=qsoo5ezdrweqlfgsvr8qnz949&st=z3u9kskj&raw=1', title:'The Rising of the Shield Hero T4 Cap 6' },
-          "7": { link:'&raw=1', title:'The Rising of the Shield Hero T4 Cap 7' },
+          "7": { link:'https://www.dropbox.com/scl/fi/spivz3z1iiblqb5ze1k4a/The-Rising-of-the-Shield-Hero-T4-Cap-7.mp4?rlkey=hnaszaa8ls8f11krsqpynlx7l&st=w7o2bnfg&raw=1', title:'The Rising of the Shield Hero T4 Cap 7' },
           "8": { link:'&raw=1', title:'The Rising of the Shield Hero T4 Cap 8' },
           "9": { link:'&raw=1', title:'The Rising of the Shield Hero T4 Cap 9' },
           "10": { link:'&raw=1', title:'The Rising of the Shield Hero T4 Cap 10' },
@@ -1016,7 +1016,7 @@
           "6": { link:'https://www.dropbox.com/scl/fi/t8glx3ouel1k7cuij3n7o/Clevatess-Majuu-no-Ou-to-Akago-T1-Cap-6.mp4?rlkey=w02u3f4360qmrml4rt360ukq9&st=5d3nsnbo&raw=1', title:'Clevatess -Majuu no Ou to Akago T1 Cap 6' },
           "7": { link:'https://www.dropbox.com/scl/fi/0qj682ootccinps3bfltj/Clevatess-Majuu-no-Ou-to-Akago-T1-Cap-7.mp4?rlkey=ppu6c2iz4lhol6cedkv7y7lsp&st=23voo8h3&raw=1', title:'Clevatess -Majuu no Ou to Akago T1 Cap 7' },
           "8": { link:'https://www.dropbox.com/scl/fi/6l7t3y46lwt3cq7wcnxty/Clevatess-Majuu-no-Ou-to-Akago-T1-Cap-8.mp4?rlkey=7p5n9wilxb8rje8ext2rfkaxi&st=ub8pj6f2&raw=1', title:'Clevatess -Majuu no Ou to Akago T1 Cap 8' },
-          "9": { link:'&raw=1', title:'Clevatess -Majuu no Ou to Akago T1 Cap 9' },
+          "9": { link:'https://www.dropbox.com/scl/fi/gvkj6w4zgwnhdfgue0ude/Clevatess-Majuu-no-Ou-to-Akago-T1-Cap-9.mp4?rlkey=tfjebrtyoknee0efzc9y5583b&st=4mny68e0&raw=1', title:'Clevatess -Majuu no Ou to Akago T1 Cap 9' },
           "10": { link:'&raw=1', title:'Clevatess -Majuu no Ou to Akago T1 Cap 10' },
           "11": { link:'&raw=1', title:'Clevatess -Majuu no Ou to Akago T1 Cap 11' },
           "12": { link:'&raw=1', title:'Clevatess -Majuu no Ou to Akago T1 Cap 12' },
