--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
       {id:7, title:"Saga of Tanya the Evil (Yōjo Senki)", img:"tanya1.jpg", rating:4.8, genres:["Acción","Aventura","Fantasía","Militar","Drama","Ciencia ficción","Seinen"]},
       {id:8, title:"Akame Ga Kill", img:"Akame1.jpg", rating:4.6, genres:["Acción","Aventura","Drama","Fantasía oscura","Shōnen","Romance","Tragedia"]},
       {id:9, title:"To Be Hero X", img:"hero11.jpg", rating:4.8, genres:["Acción","Comedia","Animación","Fantasía","Superhéroes","Seinen"]},
-      {id:10, title:"Demon Slayer", img:"demon.jpg", rating:4.8, genres:["Fantasía"]},
+      {id:10, title:"Demon Slayer", img:"demon.jpg", rating:4.9, genres:["Acción","Fantasía oscura","Aventura","Shōnen","Sobrenatural","Comedia","Drama"]},
       {id:11, title:"Maou 2099", img:"https://www.dropbox.com/scl/fi/su8i4y0cynftlnzlldfhj/maou2099-1.jpg?rlkey=4yg0msepo25lpn80kxg9ni3um&st=vdhrcc8y&raw=1", rating:4.7, genres:["Ciencia ficción","Isekai Inverso","Acción","Fantasía","Cyberpunk"]},
       {id:12, title:"Wistoria: Wand and Sword", img:"wistoria.jpg", rating:4.8, genres:["Fantasía","Aventura","Shōnen"]},
       {id:13, title:"Izure Saikyou no Renkinjutsushi", img:"Izure.jpg", rating:4.6, genres:["Aventura","Comedia","Fantasía","Isekai","Shōnen"]},
